--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -60,7 +60,27 @@
         align-items: center;
         margin-top: 16px;
 
-        span {
+        .user-info {
+          display: flex;
+
+          align-items: center;
+
+
+          img {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+          }
+
+          span {
+            margin-left: 8px;
+            color: #29292e;
+            font-weight: 500;
+            font-size: 18px;
+          }
+        }
+
+        > span {
           font-size: 16px;
           font-weight: 500;
           color: #737380;
